--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         <div class="jumbotron">
             <h1>API PQRS</h1>
             <h2>ROUTES</h2>
-            <p><strong>Principal</strong><a href="/"> https://hoteliakuepa.herokuapp.com</a></p>
+            <p><strong>Principal</strong><a href="/"> http://localhost:9000/api</a></p>
             <h2>Users</h2>
             <p><strong>GET </strong><a href="/api/users"> http://localhost:9000/api/users</a></p>
             <p><strong>GET </strong><a href="/api/users/64b6e765a588e00cdbc8717d"> http://localhost:9000/api/users/id</a><br>
@@ -24,7 +24,7 @@
 
             <h2>PQRS</h2>
             <p><strong>GET </strong><a href="/pqrs/pqrs"> http://localhost:9000/pqrs/pqrs</a></p>
-            <p><strong>GET </strong><a href="/pqrs/pqrs/64b6e765a588e00cdbc8717d"> http://localhost:9000/pqrs/pqrs/id</a><br>
+            <p><strong>GET </strong><a href="/pqrs/pqrs/64b71c66f5058019a5e316c6"> http://localhost:9000/pqrs/pqrs/id</a><br>
                 <SMall>Esta ruta obtiene una PQRS a partir de su <strong>id</strong></SMall></P>
             <p><strong>GET </strong><a href="/pqrs/64b6e765a588e00cdbc8717d"> http://localhost:9000/api/users/id</a><br>
                 <SMall>Esta ruta obtiene una PQRS a partir de su <strong>fecha</strong></SMall></P>
@@ -33,9 +33,9 @@
             <p><strong>GET </strong><a href="/pqrs/64b6e765a588e00cdbc8717d"> http://localhost:9000/api/users/id</a><br>
                 <SMall>Esta ruta obtiene una PQRS a partir de su <strong>área</strong></SMall></P>    
             <p><strong>POST </strong><a href="/pqrs/pqrs"> http://localhost:9000/pqrs/pqrs </a></p>
-            <p><strong>PUT  </strong><a href="/pqrs/pqrs/64b70b639ada743e7b6e6b3c">http://localhost:9000/pqrs/pqrs/id</a><br>   
+            <p><strong>PUT  </strong><a href="/pqrs/pqrs/64b71c66f5058019a5e316c6">http://localhost:9000/pqrs/pqrs/id</a><br>   
                 <SMall>Esta ruta permite modificar cualquier dato de una PQRS a partir de su <strong>id</strong></SMall></P>
-            <p><strong>PUT  </strong><a href="/pqrs/edit/64b70b639ada743e7b6e6b3c">http://localhost:9000/pqrs/edit/id</a><br>   
+            <p><strong>PUT  </strong><a href="/pqrs/edit/64b71c66f5058019a5e316c6">http://localhost:9000/pqrs/edit/id</a><br>   
                 <SMall>Esta ruta permite modificar el estado de una PQRS a partir de su <strong>id</strong></SMall></P>
         </div>
 
